src/amo/pages/Addon/styles.scss
@import '~amo/css/styles';

.Addon {
  @include page-padding;
}

.Addon .Card {
  margin-bottom: $padding-page;

  @include respond-to(large) {
    margin-bottom: $padding-page-l;
  }
}

.Addon-icon-wrapper {
  height: 48px;
  overflow: hidden;
  width: 48px;

  @include respond-to(medium) {
    height: 64px;
    overflow: hidden;
    width: 64px;
  }
}

.Addon-icon-image {
  height: auto;
  width: 100%;
}

.Addon-header-info-card {
  .AddonCompatibilityError,
  .Addon-non-public-notice {
    margin: 0;
    margin-bottom: 12px;
  }

  .Card-contents {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }
}

.Addon-header {
  display: flex;
  flex-direction: column;
  gap: 14px;

  @include respond-to(medium) {
    display: grid;
    column-gap: 0;

    // stylelint-disable-next-line named-grid-areas-no-invalid
    grid-template:
      'theme theme theme' auto
      'icon info info' auto
      'badge badge badge' auto
      '.   .   install' auto / auto 1fr 1fr;
  }

  @include respond-to(large) {
    grid-template:
      'theme theme theme theme theme' auto
      'icon info info info info' auto
      'badge badge badge  .   . ' auto
      'badge badge badge  .  install' auto / min-content 1fr 1fr 1fr 1fr;
  }

  @include respond-to(extraLarge) {
    grid-template:
      'theme theme theme theme theme  .  install' auto
      'icon info info info info  .  install' auto
      'badge badge badge badge badge badge badge' auto / min-content 1fr 1fr 1fr 1fr 1fr 1fr;
  }

  @include respond-to(extraExtraLarge) {
    column-gap: 0;
    // stylelint-disable named-grid-areas-no-invalid
    grid-template:
      'theme theme theme theme install install' auto
      'icon info info info  .  install' auto
      'badge badge badge badge badge badge' auto / min-content 1fr 1fr 1fr 1fr 1fr;
    // stylelint-enable named-grid-areas-no-invalid
  }

  & .Addon-theme-thumbnail {
    grid-area: theme;
  }

  & .Addon-icon-wrapper {
    grid-area: icon;
    margin-right: 16px;
  }

  & .Addon-info {
    grid-area: info;
  }

  & .AddonBadges {
    grid-area: badge;
  }

  & .Addon-install {
    grid-area: install;
  }
}

.Addon-summary {
  font-size: $font-size-default;
  overflow-x: auto;
  margin: 0;
}

.Addon .AMInstallButton-button {
  width: 100%;
}

.Addon .AMInstallButton-loading-button {
  @include respond-to(medium) {
    width: 48px;
  }
}

// Details section with lots of grid stuff, on larger displays.
@include respond-to(large) {
  .Addon-details {
    display: grid;
    grid-auto-flow: column dense;
    grid-gap: 0 $padding-page-l;
    grid-template-columns: minmax(300px, 35%) auto;
    margin: 0;

    .Addon-main-content {
      grid-column: 2;

      // This span makes sure the left widget does not move vertically when
      // there is a long description.

      grid-row: 1 / span 100000;

      // Fixes screenshot overflow in FF 52 ESR.
      max-width: 100%;
      overflow-x: hidden;

      .Card:first-child {
        margin-top: 0;
      }
    }
  }

  .Addon-screenshots {
    // overflow required to fix content overlap in Safari.
    // See https://github.com/mozilla/addons-frontend/issues/2847

    overflow-x: hidden;
  }

  // We hide this "Read reviews" link on larger displays as we actually show
  // the first page of reviews on the page.
  // TODO: Enable this once we load reviews on the addon page.
  // See: https://github.com/mozilla/addons-frontend/issues/2552
  // .Addon-overall-rating .Card-footer-link {
  //   display: none;
  // }
}

.Addon-WrongPlatformWarning {
  padding-left: 0;
  padding-right: 0;
}

.Addon-developer-comments-header {
  font-size: 15px;
  font-weight: 600;
  margin-bottom: 12px;
}

.AddonDescription-contents + .Addon-developer-comments {
  .Addon-developer-comments-header {
    margin-top: 24px;
  }
}

